--- a/packages/app/src/modules/layout/ResourceBanner.module.scss
+++ b/packages/app/src/modules/layout/ResourceBanner.module.scss
@@ -1,6 +1,5 @@
-.tileContent {
-	display: flex;
-	flex-direction: column;
-	height: 100%;
-	justify-content: space-between;
+.tileContent.tileContent {
+	:global(.fr-tile__title) {
+		margin-bottom: 0;
+	}
 }
